
0.11.0a, 2016/02/14 -- Adding configuration files so as to let the user configure credentials and API keys.
- Fixed issue #51: settings for credentials, API keys and connectivity are now stored in the user's home.
- Added a browser.cfg to let the user configure OSRFramework browser settings such as the way in which it gets connected to the internet or the user agent.

0.10.5, 2016/02/13 -- Fixed issue #86, Metacafe is returning false positives.
- Fixed issue #86: Metacafe was returning false positives and the error was updated.
- Updated a dependency for pyexcel_text package. OSRFramework now works with the latest version.

0.10.4, 2016/02/06 -- Some improvements in the alias generator to address issues #79, #80 and #81. Skype link error message defined as a warning now.
- Fixed issue #79: some new rules to be added to alias_generator.py.
- Fixed issue #80: moving the traditional profilesquatting changes to alias_generator.py. Removed the option from usufy.py.
- Fixed issue #81: all options inserted are now lowercased in alias_generator.
. Modified the Skype warning message to show what is happening and that a Skype session should be opened by the user.
- The interactive interface is now aligned and looks better.
- The birthyear is now the 4th option after the information about the profile.
- README.md brought back as README.md.

0.10.3, 2016/02/06 -- Fixes in mailfy and some searchfy platforms that got outdated.
- Fixed issue #83: alias_generator script is throwing an error related to where to find Python.
- Moved CHANGES.txt to CHANGES and README.md to README.
- Removed setup.cfg.

0.10.2, 2016/02/03 -- Fixes in mailfy and some searchfy platforms that got outdated.
- Fixed the searchfy search for the following platforms: facebook and youtube. The wrapper for twitter does NOT accept special characters such as the 'á', 'é', 'í', etc.
- Added more info to the output of the script to let the user know more info about what is happening.