@@ -10,7 +10,6 @@ deb_dist*
 *egg*
 _lab*
 _new*
-config_api_keys.py
 bin*
 _toinclude*
 output*
