@@ -25,6 +25,7 @@
 # ------------------------------------------------------------------------------
 
 [twitter]
+# You can get these details in: <https://apps.twitter.com/>
 consumer_key = 
 consumer_secret = 
 access_key =
