@@ -1,38 +1,0 @@
-# -*- coding: cp1252 -*-
-#
-##################################################################################
-#
-#    This file is part of OSRFramework.
-#
-#    OSRFramework is free software: you can redistribute it and/or modify
-#    it under the terms of the GNU General Public License as published by
-#    the Free Software Foundation, either version 3 of the License, or
-#    (at your option) any later version.
-#
-#    This program is distributed in the hope that it will be useful,
-#    but WITHOUT ANY WARRANTY; without even the implied warranty of
-#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#    GNU General Public License for more details.
-#
-#    You should have received a copy of the GNU General Public License
-#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-#
-##################################################################################
-
-def returnListOfAPIKeys():
-    '''
-        :return: A dictionary containing the API Keys stored in a dictionary depending on the information required by each platform
-    '''
-    dictAPIKeys = {}
-    #dictAPIKeys["<platform>"] = {"api_key"= "abcdfghijklmnopqrstuvwxyz"}
-    #dictAPIKeys["twitter"] = {
-    #    "consumer_key": "abcd1234567890abcd", 
-    #    "consumer_secret": "abcd1234567890abcd", 
-    #    "access_key": "abcd1234567890abcd", 
-    #    "access_secret": "abcd1234567890abcd",                         
-    #}        
-    # Uncomment the lines and change the <API_KEY> where needed.
-    #
-    #dictAPIKeys["md5crack_com"] = {"api_key"= "abcdfghijklmnopqrstuvwxyz"}
-    #dictAPIKeys["pipl_com"] = {"api_key"= "abcdfghijklmnopqrstuvwxyz"}
-    return dictAPIKeys
